force-app/main/default/objects/Forward_Duty_Contract_Line_Item__c/Forward_Duty_Contract_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Forward Duty Contract Line Item</label>
    <nameField>
        <displayFormat>FDCL-{00000000}</displayFormat>
        <label>Forward Duty Contract Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forward Duty Contract Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>