force-app/main/default/objects/Forward_Duty_Contract_Line_Item__c/fields/Balance_Amount_to_Cover__c.field-meta.xml
<CustomField>
    <fullName>Balance_Amount_to_Cover__c</fullName>
    <formula>( 1 - Forward_Duty_Contract__r.Cover_Percentage__c ) * Stock_Vehicle_Master__r.Estimated_Duty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Amount to Cover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>