force-app/main/default/objects/Forward_Duty_Contract_Line_Item__c/fields/Cover_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cover_Amount__c</fullName>
    <formula>/* IF( ISBLANK( Stock_Vehicle_Master__r.Duty_Amount__c ) , Stock_Vehicle_Master__r.Estimated_Duty__c * Forward_Duty_Contract__r.Cover_Percentage__c , Stock_Vehicle_Master__r.Duty_Amount__c * Forward_Duty_Contract__r.Cover_Percentage__c ) */

Stock_Vehicle_Master__r.Estimated_Duty__c * Forward_Duty_Contract__r.Cover_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cover Amount - Foreign Curr (Unused)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>