force-app/main/default/objects/Forward_Duty_Contract_Line_Item__c/fields/Cover_Amount_Contract_Rate__c.field-meta.xml
<CustomField>
    <fullName>Cover_Amount_Contract_Rate__c</fullName>
    <formula>Duty_Additional_Contract__r.Contract_Rate__c * Cover_Amount_Foreign__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contract Rate * Cover Amount</inlineHelpText>
    <label>Cover Amount (Contract Rate)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>