force-app/main/default/objects/Forward_Duty_Contract_Line_Item__c/fields/Cover_Amount_Spot_Rate__c.field-meta.xml
<CustomField>
    <fullName>Cover_Amount_Spot_Rate__c</fullName>
    <formula>IF(ISPICKVAL( Forward_Duty_Contract__r.Currency_Code__c , &apos;JPY&apos;), Duty_Additional_Contract__r.Spot_Rate_Sell_Execute__c * Cover_Amount_Foreign__c / 100, Duty_Additional_Contract__r.Spot_Rate_Sell_Execute__c * Cover_Amount_Foreign__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cover Amount (Spot Rate) - SGD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>