force-app/main/default/objects/Forward_Duty_Contract_Line_Item__c/fields/Cover_Amount_Spot_Rate_Foreign__c.field-meta.xml
<CustomField>
    <fullName>Cover_Amount_Spot_Rate_Foreign__c</fullName>
    <formula>Stock_Vehicle_Master__r.Estimated_Duty__c -  Execution_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cover Amount (Spot Rate) - Foreign Curr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>