force-app/main/default/objects/Forward_Duty_Contract_Line_Item__c/fields/Duty_Additional_Contract__c.field-meta.xml
<CustomField>
    <fullName>Duty_Additional_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Duty Additional Contract</label>
    <referenceTo>Duty_Additional_Contract__c</referenceTo>
    <relationshipLabel>Forward Duty Contract Line Items</relationshipLabel>
    <relationshipName>Forward_Duty_Contract_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>