force-app/main/default/objects/Forward_Duty_Contract_Line_Item__c/fields/Duty_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Duty_Payment_Date__c</fullName>
    <formula>Stock_Vehicle_Master__r.Duty_Payment_Date__c</formula>
    <label>Duty Payment Date</label>
    <type>Date</type>
</CustomField>