force-app/main/default/objects/Forward_Duty_Contract_Line_Item__c/fields/Estimated_Duty__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Duty__c</fullName>
    <formula>Stock_Vehicle_Master__r.Estimated_Duty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Duty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>