force-app/main/default/objects/Forward_Duty_Contract_Line_Item__c/fields/ETA_Date__c.field-meta.xml
<CustomField>
    <fullName>ETA_Date__c</fullName>
    <formula>Stock_Vehicle_Master__r.ETA_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ETA Date</label>
    <type>Date</type>
</CustomField>