force-app/main/default/objects/Forward_Duty_Contract_Line_Item__c/fields/Execution_Amount_In_SGD__c.field-meta.xml
<CustomField>
    <fullName>Execution_Amount_In_SGD__c</fullName>
    <formula>IF(ISPICKVAL( Forward_Duty_Contract__r.Currency_Code__c , &apos;JPY&apos;) ,Forward_Duty_Contract__r.Contract_Rate__c * Execution_Amount__c / 100, Forward_Duty_Contract__r.Contract_Rate__c * Execution_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Sold Amount in SGD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>