force-app/main/default/objects/Forward_Duty_Contract_Line_Item__c/fields/Forward_Duty_Contract__c.field-meta.xml
<CustomField>
    <fullName>Forward_Duty_Contract__c</fullName>
    <label>Forward Duty Contract</label>
    <referenceTo>Forward_Duty_Contract__c</referenceTo>
    <relationshipLabel>Forward Duty Contract Line Items</relationshipLabel>
    <relationshipName>Forward_Duty_Contract_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>