force-app/main/default/objects/Forward_Duty_Contract_Line_Item__c/fields/Gain_Loss__c.field-meta.xml
<CustomField>
    <fullName>Gain_Loss__c</fullName>
    <formula>/*( Cover_Amount_Foreign__c / Forward_Duty_Contract__r.Amount_in_SGD__c ) * Hedging_Gain_Loss__c*/
 Cover_Amount_Spot_Rate__c -  Cover_Amount_Contract_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gain/Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>