force-app/main/default/objects/Forward_Duty_Contract_Line_Item__c/fields/Hedging_Gain_Loss__c.field-meta.xml
<CustomField>
    <fullName>Hedging_Gain_Loss__c</fullName>
    <formula>( Duty_Additional_Contract__r.Spot_Rate_Sell_Execute__c - Forward_Duty_Contract__r.Contract_Rate__c ) * Cover_Amount_Foreign__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hedging Gain/Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>