force-app/main/default/objects/Forward_Duty_Contract_Line_Item__c/fields/Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Date__c</fullName>
    <formula>Forward_Duty_Contract__r.Maturity_Date__c</formula>
    <label>Maturity Date</label>
    <type>Date</type>
</CustomField>