force-app/main/default/objects/Forward_Duty_Contract_Line_Item__c/fields/Vehicle_Status__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Status__c</fullName>
    <formula>TEXT(Stock_Vehicle_Master__r.Vehicle_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Status</label>
    <type>Text</type>
</CustomField>